<resources>
    <string name="app_name">Просто цитатник</string>
    <string name="credentials_email">Email</string>
    <string name="credentials_password">Пароль</string>
    <string name="login">Вход</string>
    <string name="signup">Регистрация</string>
    <string name="error_cannot_be_empty">Не может быть пустым</string>
    <string name="error_invalid_email">Неверный email</string>
    <string name="error_invalid_pass">Неверный пароль</string>
    <string name="error_weak_pass">Слабый пароль</string>
    <string name="error_not_found_try_again">Не найдено. Попробуйте еще раз</string>
    <string name="error_io_try_again">Не удалось загрузить данные. Попробуйте еще раз</string>
    <string name="error_occured_try_again">Возникла ошибка. Попробуйте еще раз</string>
    <string name="my_books">Мои книги</string>
    <string name="retry_action">Повторить</string>
    <string name="books_empty">Здесь будут ваши книги</string>
    <string name="not_found">Ничего не найдено</string>
    <string name="search">Поиск</string>
    <string name="book_used_for_twitter">Используется для экспорта из Twitter</string>
    <string name="add_book_title">Добавить книгу</string>
    <string name="book_search_hint">Название, автор, ссылка на LiveLib</string>
    <string name="error_book_name_already_added">Книга «%1$s» уже в вашей коллекции</string>
    <string name="error_book_already_added">Книга уже в вашей коллекции</string>
    <string name="book_added">Книга добавлена</string>
    <string name="book_adding_progress">Добавление книги…</string>
    <string name="my_quotes">Мои цитаты</string>
    <string name="logout_action">Выйти</string>
    <string name="profile_settings">Параметры</string>
    <string name="logout_confirmation">Выйти из аккаунта?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="delete_action">Удалить</string>
    <string name="use_for_twitter_action">Использовать для экспорта из Twitter</string>
    <string name="quotes_empty">Здесь будут ваши цитаты</string>
    <string name="quote_book_title">— %1$s</string>
    <string name="this_book_is_used_for_twitter_export">Эта книга используется для экспорта из Twitter</string>
    <string name="twitter_export_enabled">Теперь отрывки, отправленные с Kindle через Twitter, будут добавляться к этой книге</string>
    <string name="delete_book_name_confirmation">Удалить книгу «%1$s» и все цитаты из нее?</string>
    <string name="book_deleting_progress">Удаление книги…</string>
    <string name="book_deleted">Книга удалена</string>
    <string name="add_quote_title">Добавить цитату</string>
    <string name="save_action">Сохранить</string>
    <string name="input_text_hint">Введите текст</string>
    <string name="delete_quote_confirmation">Удалить эту цитату?</string>
    <string name="quote_saving_progress">Сохранение цитаты…</string>
    <string name="quote_saved">Цитата сохранена</string>
    <string name="quote_deleting_progress">Удаление цитаты…</string>
    <string name="quote_deleted">Цитата удалена</string>
    <string name="share_action">Поделиться</string>
    <string name="twitter_login">Вход через Twitter</string>
    <string name="profile_information">Информация</string>
    <string name="twitter_export">Экспорт через Twitter</string>
    <string name="user_name_hint">Имя</string>
    <string name="twitter_nickname_hint">Учетная запись</string>
    <string name="connect_twitter_account_action">Подключить учетную запись</string>
    <string name="change_twitter_account_action">Изменить</string>
    <string name="scan_with_lens_action">Считать через Объектив</string>
    <string name="public_quote">Публичная цитата</string>
    <string name="add_book_by_link">Добавить по ссылке</string>
</resources>
