<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_check"
        android:title="@string/save_action"
        app:showAsAction="always" />
    <item
        android:id="@+id/scan_with_lens"
        android:icon="@drawable/ic_scan_frame"
        android:title="@string/scan_with_lens_action"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share_action"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_action"
        app:showAsAction="ifRoom" />
</menu>