<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="ua.com.radiokot.pc.activities.ProfileInfoActivity">

    <include layout="@layout/default_appbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/include_progress"
                layout="@layout/layout_progress" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_margin">

                <TextView
                    style="@style/Heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:text="@string/profile_information" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/double_standard_margin"
                        app:srcCompat="@drawable/ic_profile" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/user_name_text_view"
                            style="@style/ProfileInfoContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Oleg K" />

                        <TextView
                            style="@style/InfoHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/user_name_hint" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="24dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="@dimen/double_standard_margin" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/email_text_view"
                            style="@style/ProfileInfoContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="oleg@radiokot.com.ua" />

                        <TextView
                            style="@style/InfoHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/credentials_email" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    style="@style/Heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/double_standard_margin"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:text="@string/twitter_export" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/double_standard_margin"
                        app:srcCompat="@drawable/ic_twitter"
                        app:tint="@color/icon" />

                    <LinearLayout
                        android:id="@+id/twitter_info_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/twitter_nickname_text_view"
                            style="@style/ProfileInfoContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="radiokot42" />

                        <TextView
                            style="@style/InfoHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/twitter_nickname_hint" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/twitter_first_auth_button"
                        style="@style/PrimaryButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/connect_twitter_account_action"
                        android:visibility="gone" />
                </LinearLayout>

                <Button
                    android:id="@+id/twitter_auth_button"
                    style="@style/SecondaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/double_standard_padding"
                    android:layout_marginTop="@dimen/half_standard_margin"
                    android:text="@string/change_twitter_account_action" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/include_appbar_elevation" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
